RESOLVED FIXED129528
ASSERT(isMainThread()) hit under platformUserPreferredLanguages() with WebKit1 and WebKit2 in the same process
https://bugs.webkit.org/show_bug.cgi?id=129528
Summary ASSERT(isMainThread()) hit under platformUserPreferredLanguages() with WebKit...
Sam Weinig
Reported 2014-02-28 18:55:49 PST
ASSERT(isMainThread()) hit under platformUserPreferredLanguages() with WebKit1 and WebKit2 in the same process
Attachments
Patch (4.93 KB, patch)
2014-02-28 18:58 PST, Sam Weinig
kling: review+
Sam Weinig
Comment 1 2014-02-28 18:58:13 PST
Sam Weinig
Comment 2 2014-02-28 19:06:20 PST
Note You need to log in before you can comment on or make changes to this bug.