ASSERT(isMainThread()) hit under platformUserPreferredLanguages() with WebKit1 and WebKit2 in the same process https://bugs.webkit.org/show_bug.cgi?id=129528

Reviewed by Andreas Kling.

* platform/mac/Language.mm:
(WebCore::preferredLanguagesMutex):
(WebCore::preferredLanguages):
(+[WebLanguageChangeObserver languagePreferencesDidChange:]):
(WebCore::httpStyleLanguageCode):
(WebCore::platformUserPreferredLanguages):
Add a mutex and do an isolated copy of the strings to allow this function to be called from multiple threads.


Canonical link: https://commits.webkit.org/147583@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164903 268f45cc-cd09-0410-ab3c-d52691b4dbfc